add clean code provider from https://github.com/fsharp/fsharpbinding/tree/master/monodevelop/MonoDevelop.FSharpBinding/PowerPack

--- a/src/FSharp.Compiler.CodeDom/FSharp.Compiler.CodeDom.fsproj
+++ b/src/FSharp.Compiler.CodeDom/FSharp.Compiler.CodeDom.fsproj
@@ -58,6 +58,8 @@
     <Compile Include="CodeCompiler.fs" />
     <Compile Include="CodeProvider.fsi" />
     <Compile Include="CodeProvider.fs" />
+    <Compile Include="CleanCodeDomGenerator.fs" />
+    <Compile Include="CleanCodeProvider.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
