--- a/src/FSharp.Compiler.CodeDom/FSharp.Compiler.CodeDom.fsproj
+++ b/src/FSharp.Compiler.CodeDom/FSharp.Compiler.CodeDom.fsproj
@@ -23,7 +23,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
     <DocumentationFile>..\..\bin\FSharp.Compiler.CodeDom.xml</DocumentationFile>
-    <OtherFlags></OtherFlags>
+    <OtherFlags>--keyfile:..\..\mono.snk</OtherFlags>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -33,7 +33,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
     <DocumentationFile>..\..\bin\FSharp.Compiler.CodeDom.xml</DocumentationFile>
-    <OtherFlags></OtherFlags>
+    <OtherFlags>--keyfile:..\..\mono.snk</OtherFlags>
   </PropertyGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
