MSI installer support for upgrade installs
We now set the installer's version to match that of the assembly in
order to facilitate upgrade installations.

--- a/Installer/ModifyMachineConfig/ModifyMachineConfig.csproj
+++ b/Installer/ModifyMachineConfig/ModifyMachineConfig.csproj
@@ -56,10 +56,7 @@
     <Reference Include="System.Xml.Linq" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Xml" />
-    <Reference Include="Microsoft.Deployment.WindowsInstaller"
-               Condition="'$(OS)' != 'Unix'">
-      <Private>True</Private>
-    </Reference>
+    <Reference Include="Microsoft.Deployment.WindowsInstaller" Condition="'$(OS)' != 'Unix'" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ModifyMachineConfig.cs" Condition="'$(OS)' != 'Unix'" />
