Move to paket + newer ProjectScaffold version

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@
 
 # Xamarin Studio / monodevelop user-specific
 *.userprefs
+*.dll.mdb
+*.exe.mdb
 
 # Build results
 
@@ -18,7 +20,9 @@ build/
 [Bb]in/
 [Oo]bj/
 
-# Enable "build/" folder in the NuGet Packages folder since NuGet packages use it for MSBuild targets
+# NuGet Packages Directory
+packages/
+# but enable "build/" folder in the NuGet Packages folder since NuGet packages use it for MSBuild targets
 !packages/*/build/
 
 # MSTest test Results
@@ -62,6 +66,9 @@ ipch/
 *.vsp
 *.vspx
 
+# Other Visual Studio data
+.vs/
+
 # Guidance Automation Toolkit
 *.gpState
 
@@ -97,9 +104,6 @@ publish/
 
 # Publish Web Output
 *.Publish.xml
-
-# Enable nuget.exe in the .nuget folder (though normally executables are not tracked)
-!.nuget/NuGet.exe
 
 # Windows Azure Build Output
 csx
@@ -161,9 +165,6 @@ $RECYCLE.BIN/
 # Exclude F# project specific directories and files
 # ===================================================
 
-# NuGet Packages Directory
-packages/
-
 # Generated documentation folder
 docs/output/
 
@@ -175,3 +176,14 @@ TestResults.xml
 
 # Nuget outputs
 nuget/*.nupkg
+
+release.cmd
+release.sh
+localpackages/
+paket-files
+*.orig
+.paket/paket.exe
+docs/content/license.md
+docs/content/release-notes.md
+.fake
+docs/tools/FSharp.Formatting.svclog
