--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
-language: objective-c
+language: csharp
 
 env:
   matrix:
     - MONO_VERSION="3.4.0"
+
+sudo: false
+
+before_install:
+  - chmod +x build.sh
 
 install:
   - wget "http://download.mono-project.com/archive/3.4.0/macos-10-x86/MonoFramework-MDK-${MONO_VERSION}.macos10.xamarin.x86.pkg"
