--- a/Installer/ModifyMachineConfig/ModifyMachineConfig.csproj
+++ b/Installer/ModifyMachineConfig/ModifyMachineConfig.csproj
@@ -56,10 +56,10 @@
     <Reference Include="System.Xml.Linq" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Xml" />
-    <Reference Include="Microsoft.Deployment.WindowsInstaller" Condition="'$(OS)' != 'Unix'" />
+    <Reference Include="Microsoft.Deployment.WindowsInstaller" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ModifyMachineConfig.cs" Condition="'$(OS)' != 'Unix'" />
+    <Compile Include="ModifyMachineConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Content Include="CustomAction.config" />
   </ItemGroup>
