--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,14 @@
 language: csharp
 
-env:
-  matrix:
-    - MONO_VERSION="3.4.0"
+os:
+  - linux
+  - osx
 
-sudo: required
+mono:
+  - 4.2.2
 
 before_install:
   - chmod +x build.sh
-
-install:
-  - wget "http://download.mono-project.com/archive/3.4.0/macos-10-x86/MonoFramework-MDK-${MONO_VERSION}.macos10.xamarin.x86.pkg"
-  - sudo installer -pkg "MonoFramework-MDK-${MONO_VERSION}.macos10.xamarin.x86.pkg" -target /
 
 script: 
   - ./build.sh All
