--- a/tests/FSharp.Compiler.CodeDom.Tests/FSharp.Compiler.CodeDom.Tests.fsproj
+++ b/tests/FSharp.Compiler.CodeDom.Tests/FSharp.Compiler.CodeDom.Tests.fsproj
@@ -10,7 +10,6 @@
     <RootNamespace>FSharp.Compiler.CodeDom.Tests</RootNamespace>
     <AssemblyName>FSharp.Compiler.CodeDom.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <TargetFSharpCoreVersion>4.3.1.0</TargetFSharpCoreVersion>
     <Name>FSharp.Compiler.CodeDom.Tests</Name>
     <TargetFrameworkProfile />
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
@@ -62,7 +61,8 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
-    <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <Reference Include="FSharp.Core, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <HintPath>..\..\packages\test\FSharp.Core\lib\net45\FSharp.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
